--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 
-VITE_API_URL=https://ai-ticket-backend-3hzo.onrender.com
+VITE_API_URL=https://ai-ticket-prioritization-git-main-kavyas-projects-91c72349.vercel.app
